--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+attrs==22.1.0
 cfgv==3.3.1
 coverage==6.4.2
 distlib==0.3.5
 filelock==3.7.1
 identify==2.5.3
+iniconfig==1.1.1
 nodeenv==1.7.0
 packaging==21.3
 platformdirs==2.5.2
@@ -10,8 +12,10 @@ pluggy==1.0.0
 pre-commit==2.20.0
 py==1.11.0
 pyparsing==3.0.9
+pytest==7.1.2
 PyYAML==6.0
 six==1.16.0
 toml==0.10.2
+tomli==2.0.1
 tox==3.25.1
 virtualenv==20.16.2
