--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,31 @@
-attrs==22.1.0
-cfgv==3.3.1
-coverage==6.4.2
-distlib==0.3.5
-filelock==3.7.1
-identify==2.5.3
-iniconfig==1.1.1
-nodeenv==1.7.0
-packaging==21.3
-platformdirs==2.5.2
-pluggy==1.0.0
-pre-commit==2.20.0
-py==1.11.0
-pyparsing==3.0.9
-pytest==7.1.2
-PyYAML==6.0
+asttokens==2.0.5
+backcall==0.2.0
+certifi==2022.6.15
+charset-normalizer==2.0.12
+decorator==5.1.1
+executing==0.9.1
+Faker==13.15.1
+idna==3.3
+ipython==8.4.0
+jedi==0.18.1
+matplotlib-inline==0.1.3
+numpy==1.23.1
+pandas==1.4.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.30
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.12.0
+python-dateutil==2.8.2
+pytz==2022.1
+requests==2.27.1
 six==1.16.0
-toml==0.10.2
-tomli==2.0.1
-tox==3.25.1
-virtualenv==20.16.2
+stack-data==0.3.0
+tqdm==4.64.0
+traitlets==5.3.0
+urllib3==1.26.11
+validators==0.18.2
+wcwidth==0.2.5
+weaviate-client==3.7.0
