--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asttokens==2.0.5
 backcall==0.2.0
 certifi==2022.6.15
 charset-normalizer==2.0.12
+click==8.1.3
+colorama==0.4.5
 decorator==5.1.1
 executing==0.9.1
 Faker==13.15.1
@@ -21,10 +23,12 @@ Pygments==2.12.0
 python-dateutil==2.8.2
 pytz==2022.1
 requests==2.27.1
+shellingham==1.5.0
 six==1.16.0
 stack-data==0.3.0
 tqdm==4.64.0
 traitlets==5.3.0
+typer==0.6.1
 urllib3==1.26.11
 validators==0.18.2
 wcwidth==0.2.5
