--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2022.6.15
 charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.5
+commonmark==0.9.1
 decorator==5.1.1
 executing==0.9.1
 Faker==13.15.1
@@ -23,6 +24,7 @@ Pygments==2.12.0
 python-dateutil==2.8.2
 pytz==2022.1
 requests==2.27.1
+rich==12.5.1
 shellingham==1.5.0
 six==1.16.0
 stack-data==0.3.0
